Fixed alignment issues on about and project pages

--- a/app/less/about.less
+++ b/app/less/about.less
@@ -1,4 +1,7 @@
 .about {
+  width: 1000px;
+  margin: 0px auto;
+
   p {
     text-align: justify;
   }
