--- a/app/less/projects.less
+++ b/app/less/projects.less
@@ -1,4 +1,7 @@
 .projects {
+  width: 1050px;
+  margin: 0px auto;
+
   .title {
     text-align: center;
     margin-bottom: 25px;
